Normalize css  y Color Pallet

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Dojonary</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="header-title">
             <h1>Dojonary</h1>
         </div>
