--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-title">
-            <h1>Dojonary</h1>
-        </div>
-        <div class="header-search">
-            <input class="header-search-input" type="text" placeholder="Search">
-        </div>
-        <div class="header-login">
-            <button class="header-login-button">Login</button>
-        </div>
+        <nav class="header-content">
+            <div class="header-title">
+                <h1>Dojonary</h1>
+            </div>
+            <div class="header-search">
+                <input class="header-search-input" type="text" placeholder="Search">
+            </div>
+            <div class="header-login">
+                <button class="header-login-button">Login</button>
+            </div>
+        </nav>
     </header>
     <section>
         <main class="main">
