--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </div>
         </nav>
     </header>
-    <section class="body">
-        <section class="content">
+    <div class="body">
+        <div class="content">
             <nav>
                 <input class="header-search-input content-nav" type="text" placeholder="Search">
             </nav>
@@ -64,8 +64,8 @@
                     </div>
                 </section>
             </aside>
-        </section>
-    </section>
+        </div>
+    </div>
     <script src="./js/index.js"></script>
 </body>
 </html>
