--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <article class="main-article">
                     <div class="article-content">
                         <h2>ninja</h2>
-                        <h3>noun</h3>
+                        <h3 class="article-plural">noun</h3>
                         <p>Plural: <span class="article-plural">ninjas</span></p>
                         <button class="btn article-btn" onclick="alert('Ninja was liked')">13 likes</button>
                     </div>
@@ -43,7 +43,7 @@
                 <article class="main-article">
                     <div class="article-content">
                         <h2>ninja</h2>
-                        <h3>noun</h3>
+                        <h3 class="article-plural">noun</h3>
                         <p>Plural: <span class="article-plural">ninjas</span></p>
                         <button class="btn article-btn" onclick="alert('Ninja was liked')">13 likes</button>
                     </div>
